# glusterfs

./: .gitignore  README.md  configure.ac  groups  project.config  rfc.sh
cli/src/: cli-cmd-parser.c  cli-cmd-volume.c  cli-rpc-ops.c  cli-xml-output.c
contrib/crc32c/: crc32c-tables.c  crc32c-tables.h  crc32c.c  crc32c.h
libglusterfs/src/: Makefile.am  call-stub.c  call-stub.h  cluster-syncop.h  defaults-tmpl.c  defaults.h  generator.py  glfs-message-id.h  globals.c  globals.h  glusterfs.h  xlator.c  xlator.h
rpc/rpc-lib/src/: protocol-common.h
rpc/xdr/src/: glusterfs3-xdr.x
tests/: dht2.rc
tests/basic/dht2/: creat.t
tests/experimental/dht2/: creat.t  dht2-basictests-gfapi.c  dht2-basictests.sh
xlators/cluster/: Makefile.am
xlators/cluster/afr/src/: pump.c
xlators/cluster/dht2/docs/: DHT2_2nd_Prototype_DentryInodeAndData_Separation.md  DHT2_FirstPrototypeDesign.md  DHT2_Icreate_Namelink_Notes  DHT2_IterationPlan.md  DHT2_Size_On_MDS  DHT2_WSRTemplate.md  DHT2_WSR_Week002_Aug_20_2015.md  DHT2_WSR_Week003_Aug_28_2015.md  POSIX_FunctionalSpec.md  dht2-xlator-deps.txt
xlators/cluster/dht2/src/: Makefile.am  dht2-autogen-fops-c.py  dht2-autogen-fops-h.py  dht2-autogen-fops-tmpl.c  dht2-autogen-fops-tmpl.h  dht2-dir.c  dht2-helpers.c  dht2-helpers.h  dht2-inode-fops.c  dht2-layout.c  dht2-layout.h  dht2-main.c  dht2-mem-types.h  dht2-messages.h  dht2.h  dht2autogenfopslist.py
xlators/mgmt/glusterd/src/: glusterd-brick-ops.c  glusterd-handler.c  glusterd-store.c  glusterd-store.h  glusterd-utils.c  glusterd-volgen.c  glusterd-volume-ops.c  glusterd.h
xlators/performance/io-threads/src/: io-threads.c
xlators/protocol/client/src/: client-rpc-fops.c  client.c
xlators/protocol/server/src/: server-rpc-fops.c
xlators/storage/: Makefile.am
xlators/storage/posix2/: Makefile.am
xlators/storage/posix2/common/: posix2-common.c  posix2-mem-types.h  posix2.h
xlators/storage/posix2/common/src/: Makefile.am  posix2-common.c  posix2-mem-types.h  posix2.h
xlators/storage/posix2/ds/src/: Makefile.am  posix2-ds-helpers.c  posix2-ds-helpers.h  posix2-ds-messages.h  posix2-ds.c  posix2-ds.h
xlators/storage/posix2/mds/src/: Makefile.am  posix2-common.c  posix2-mds-helpers.c  posix2-mds-helpers.h  posix2-mds.c  posix2-mds.h  posix2-messages.h  super.h  xattrstore-dir.c  xattrstore.c  xattrstore.h  zfinode.c  zfinode.h  zfstore-dir.c  zfstore-file.c  zfstore-handle.c  zfstore-handle.h  zfstore.c  zfstore.h  zfxattr.c  zfxattr.h
xlators/storage/posix2/src/: Makefile.am  posix2-handle.h  posix2-helpers.c  posix2.c  posix2.h
